--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,6 +27,9 @@ jobs:
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
+    - name: Install Dependencies
+      run: sudo apt-get update && sudo apt-get install -yq libcairo2-dev
+
     - name: Build
       working-directory: ${{github.workspace}}/crappybar/build
       shell: bash
