--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,7 +39,6 @@ jobs:
     - name: 'Upload Artifact'
       uses: actions/upload-artifact@v2
       with:
-        name: my-artifact
-        path: my_file.txt
+        path: ${{github.workspace}}/crappybar/build/bar
       
       
